Fix pageload hang attempt

--- a/src/main/resources/templates/student/quests.twig
+++ b/src/main/resources/templates/student/quests.twig
@@ -23,13 +23,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="inventory.html">
+                        <a href="/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="wallet.html">
+                        <a href="/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins">100</div>
                         </a>
@@ -41,7 +41,7 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/static/login.html"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="/login"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
                     </figure>
 
                 </span>
@@ -49,13 +49,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="store">STORE</a>
+                        <a href="/store">STORE</a>
                     </li>
                     <li>
-                        <a href="crowdfunding.html"> CROWDFUNDING</a>
+                        <a href="/crowdfunding"> CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="quests">QUESTS</a>
+                        <a href="/quests">QUESTS</a>
                     </li>
                 </ul>
             </nav>
