--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Store_artifacts</title>
+    <title>Store artifacts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
@@ -24,13 +24,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="inventory.html">
+                        <a href="/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="wallet.html">
+                        <a href="/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins">100</div>
                         </a>
@@ -42,7 +42,7 @@
                     </figure>
 
                     <figure class="icon">
-                        <a href="/static/login.html"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
+                        <a href="/login"><img src="/static/img/logout.png" class="icon_img" alt="logout"></a>
                     </figure>
 
                 </span>
@@ -51,13 +51,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="store">STORE</a>
+                        <a href="/store">STORE</a>
                     </li>
                     <li>
-                        <a href="crowdfunding.html">CROWDFUNDING</a>
+                        <a href="/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="quests">QUESTS</a>
+                        <a href="/quests">QUESTS</a>
                     </li>
                 </ul>
             </nav>
