--- a/src/main/resources/templates/student/wallet.twig
+++ b/src/main/resources/templates/student/wallet.twig
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>QuestStore login</title>
+    <title>Wallet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
@@ -22,13 +22,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="/student/inventory">
+                        <a href="/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="/student/wallet">
+                        <a href="/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins"> {{ coolcoins_amount }} </div>
                         </a>
@@ -51,13 +51,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/student/store">STORE</a>
+                        <a href="/store">STORE</a>
                     </li>
                     <li>
-                        <a href="/student/crowdfunding">CROWDFUNDING</a>
+                        <a href="/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="/student/artifacts">ARTIFACTS</a>
+                        <a href="/artifacts">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
