--- a/src/main/resources/templates/student/inventory.twig
+++ b/src/main/resources/templates/student/inventory.twig
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Crowfunding</title>
+    <title>Inventory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
