--- a/src/main/resources/templates/student/inventory.twig
+++ b/src/main/resources/templates/student/inventory.twig
@@ -58,7 +58,7 @@
                         <a href="/student/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="/student/artifact">ARTIFACTS</a>
+                        <a href="/student/quest">QUESTS</a>
                     </li>
                 </ul>
             </nav>
