--- a/src/main/resources/templates/student/quests.twig
+++ b/src/main/resources/templates/student/quests.twig
@@ -23,13 +23,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="inventory.html">
+                        <a href="/student/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="wallet.html">
+                        <a href="/student/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins">100</div>
                         </a>
@@ -49,13 +49,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="store">STORE</a>
+                        <a href="/student/store">STORE</a>
                     </li>
                     <li>
-                        <a href="crowdfunding.html"> CROWDFUNDING</a>
+                        <a href="/student/crowdfunding"> CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="quests">QUESTS</a>
+                        <a href="/student/quest">QUESTS</a>
                     </li>
                 </ul>
             </nav>
@@ -178,10 +178,5 @@
         </footer>
     </div>
 </body>
-
-
-
-
-
 
 </html>
