--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -24,13 +24,13 @@
                 <span id="header_icons">
 
                     <figure class="icon">
-                        <a href="inventory.html">
+                        <a href="/student/inventory">
                             <img src="/static/img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
                     <figure class="icon">
-                        <a href="wallet.html">
+                        <a href="/student/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins">100</div>
                         </a>
@@ -51,13 +51,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="store">STORE</a>
+                        <a href="/student/store">STORE</a>
                     </li>
                     <li>
-                        <a href="crowdfunding.html">CROWDFUNDING</a>
+                        <a href="/student/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="quests">QUESTS</a>
+                        <a href="/student/quest">QUESTS</a>
                     </li>
                 </ul>
             </nav>
@@ -114,6 +114,8 @@
                     {% endfor %}
 
             </div>
+
+        </div>
 
 
         <footer>
