--- a/src/main/resources/templates/student/wallet.twig
+++ b/src/main/resources/templates/student/wallet.twig
@@ -57,7 +57,7 @@
                         <a href="/student/crowdfunding">CROWDFUNDING</a>
                     </li>
                     <li>
-                        <a href="/student/artifacts">ARTIFACTS</a>
+                        <a href="/student/quest">QUESTS</a>
                     </li>
                 </ul>
             </nav>
@@ -66,7 +66,7 @@
         <div class="main_content">
 
             <h1>Wallet</h1>
-            <p>You have <span id="actual_cc_amount"> {{ coolcoins_amount }} </span>cc</p>
+            <p>You have <span id="actual_cc_amount"> 55 </span>cc</p>
 
         </div>
         <footer>
