Add link to favicon in all student twigs Remove favicon from folders different than img

--- a/src/main/resources/templates/student/crowdfunding.twig
+++ b/src/main/resources/templates/student/crowdfunding.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/cards.css">
+    <link rel="icon" href="/static/img/favicon.ico">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                     <figure class="icon">
                         <a href="/student/wallet">
                             <img src="/static/img/wallet.png" class="icon_img" alt="wallet">
-                            <div id="amount_of_coolcoins"> {{% coolcoins_amount %}} </div>
+                            <div id="amount_of_coolcoins"> 55 </div>
                         </a>
                     </figure>
 
@@ -88,6 +89,5 @@
     </div>
 
 </body>
-<script src="/static/js/crowdfunding.js"></script>
 
 </html>
