--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Store_artifacts</title>
+    <title>Store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/cards.css">
+    <link rel="icon" href="/static/img/favicon.ico">
 </head>
 
 <body>
