Remove dupa statements in error handling at ArtifactDAO

--- a/src/main/resources/templates/mentor/quests.twig
+++ b/src/main/resources/templates/mentor/quests.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/cards.css">
+    <link rel="icon" href="/static/img/favicon.ico">
 
 </head>
 
@@ -82,7 +83,7 @@
                         <p class="text_on_card_1"><input id="input_card_value" type="text" placeholder="Value..."></p>
                     </div>
 
-                    <button id="button_create_quest_card" type="button" onclick="create_quest_card()">
+                    <button id="button_create_quest_card" type="button" ">
                         <p class="text_on_button">Create quest</p>
                     </button>
 
@@ -169,7 +170,7 @@
                                 </li>
                             </ul>
                             <p class="extra">EXTRA QUEST</p>
-                            <button class="editcardbutton" id="Spot_trap_card_b" onclick="editCard()">EDIT CARD</button>
+                            <button class="editcardbutton" id="Spot_trap_card_b" >EDIT CARD</button>
 
                         </div>
 
@@ -189,7 +190,7 @@
                                 </li>
                             </ul>
                             <p class="extra">EXTRA QUEST</p>
-                            <button class="editcardbutton" id="Taming_a_pet_b" onclick="editCard()">EDIT CARD</button>
+                            <button class="editcardbutton" id="Taming_a_pet_b" ">EDIT CARD</button>
                         </div>
 
                         <div class="card">
@@ -411,6 +412,5 @@
     </div>
 
 </body>
-<script src="/static/js/cards.js"></script>
 
 </html>
