--- a/src/main/resources/templates/mentor/artifacts.twig
+++ b/src/main/resources/templates/mentor/artifacts.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/cards.css">
+    <link rel="icon" href="/static/img/favicon.ico">
 </head>
 
 <body>
