--- a/src/main/resources/templates/mentor/codecoolers.twig
+++ b/src/main/resources/templates/mentor/codecoolers.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/codecoolers.css">
+    <link rel="icon" href="/static/img/favicon.ico">
 
 </head>
 
@@ -120,6 +121,5 @@
     </div>
 
 </body>
-<script src="/static/js/codecoolers.js"></script>
 
 </html>
