Show aproved quest for student

--- a/src/main/resources/templates/student/quests.twig
+++ b/src/main/resources/templates/student/quests.twig
@@ -91,7 +91,7 @@
             <h2>Your Basic Quests</h2>
 
             <div class="artefacts">
-                    {% for quest in questsBasic %}
+                    {% for quest in questsStudentBasic %}
                         <div class="card_from_mentor">
                             <p class="text_on_card_1"> {{ quest.getTitle }} </p>
                             <div>
@@ -137,7 +137,7 @@
             <h2>Your Extra Quests</h2>
 
                   <div class="artefacts">
-                          {% for quest in questsExtra %}
+                          {% for quest in questsStudentExtra %}
                               <div class="card_from_mentor">
                                   <p class="text_on_card_1"> {{ quest.getTitle }} </p>
                                   <div>
