Done student level in all studentcontrolers

--- a/src/main/resources/templates/student/crowdfunding.twig
+++ b/src/main/resources/templates/student/crowdfunding.twig
@@ -38,7 +38,7 @@
 
                     <figure class="icon">
                         <img src="/static/img/star-icon.png" class="icon_img" alt="exp_icon">
-                        <div id="exp_level">5</div>
+                        <div id="exp_level">{{ student_level }}</div>
                     </figure>
 
                     <figure class="icon">
