Add proper jpg to extra quests

--- a/src/main/resources/templates/student/quests.twig
+++ b/src/main/resources/templates/student/quests.twig
@@ -119,7 +119,7 @@
                               <div class="card_artefacts">
                                   <p class="text_on_card_1"> {{ quest.getTitle }} </p>
                                   <div>
-                                      <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
+                                      <img class="pictures_on_card" src="/static/img/owlSmall.jpg" alt="Picture of Hero" />
                                   </div>
                                   <ul>
                                       <li>
@@ -141,7 +141,7 @@
                               <div class="card_from_mentor">
                                   <p class="text_on_card_1"> {{ quest.getTitle }} </p>
                                   <div>
-                                      <img class="pictures_on_card" src="/static/img/heroes.jpg" alt="Picture of Hero" />
+                                      <img class="pictures_on_card" src="/static/img/owlSmall.jpg" alt="Picture of Hero" />
                                   </div>
                                   <ul>
                                       <li>
