Show students coolcoins in wallet

--- a/src/main/resources/templates/student/wallet.twig
+++ b/src/main/resources/templates/student/wallet.twig
@@ -67,7 +67,7 @@
         <div class="main_content">
 
             <h1>Wallet</h1>
-            <p>You have <span id="actual_cc_amount"> 55 </span>cc</p>
+            <p>You have <span id="actual_cc_amount"> {{coolcoins_amount}} </span>cc</p>
 
         </div>
         <footer>
