--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -174,6 +174,11 @@ td {
     margin-left: 25%;
     background-color: #4CAF50;
 }
+#warning {
+    font-size: 2em;
+    font-weight: bold;
+    color: red;
+}
 @media screen and (max-width: 1200px) {
     .page_content {
         width: 90%;
