--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -174,6 +174,14 @@ td {
     margin-left: 25%;
     background-color: #4CAF50;
 }
+.crowdfund_item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.crowdfund_item form input {
+    width: 200px;
+}
 #warning {
     font-size: 2em;
     font-weight: bold;
